--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemailer": "^6.7.8",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
